# lab2

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  LinkedList.h  ListSequence.h  Sequence.h  UI.cpp  UI.h  main.cpp  tests.cpp  tests.h
